force-app/main/default/objects/Field_History_Tracker__c/Field_History_Tracker__c.object-meta.xml
<CustomObject>
    <label>Field History Tracker</label>
    <nameField>
        <displayFormat>FHT-{000000}</displayFormat>
        <label>Field History Tracker Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field History Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>