force-app/main/default/objects/Field_History_Tracker__c/fields/Sobject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Sobject_API_Name__c</fullName>
    <label>Sobject API Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>