force-app/main/default/objects/Field_History_Tracker__c/fields/Sobject_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Sobject_Record_Id__c</fullName>
    <label>Sobject Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>