force-app/main/default/objects/Field_History_Tracker__c/recordTypes/Batch_Info.recordType-meta.xml
<RecordType>
    <fullName>Batch_Info</fullName>
    <active>true</active>
    <label>Batch Info</label>
</RecordType>