force-app/main/default/objects/Field_History_Tracker__c/recordTypes/tracker.recordType-meta.xml
<RecordType>
    <fullName>tracker</fullName>
    <active>true</active>
    <label>tracker</label>
</RecordType>